--- a/templates/forms/new_venue.html
+++ b/templates/forms/new_venue.html
@@ -47,7 +47,7 @@
             </div>
              <div class="form-group">
                 <label for="seeking_talent">Seeking Talent</label>
-                {{ form.seeking_talent(class_ = 'form-control', autofocus = true) }}
+                {{ form.seeking_talent(autofocus = true) }}
             </div>
             <div class="form-group">
                 <label for="seeking_description">Seeking Description</label>
